# TapeYadro

./: .gitignore  CMakeLists.txt  README.md  main.cpp
files/: .env
src/: CMakeLists.txt
src/configuration/: ConfigurationProperties.cpp  ConfigurationProperties.h
src/data/: CMakeLists.txt
src/data/models/: ConfigurationProperties.h
src/data/services/: CommandLineParser.cpp  CommandLineParser.h  EnvFileParser.cpp  EnvFileParser.h  Tape.cpp  Tape.h
src/domain/: CMakeLists.txt
src/domain/services/: CommandLineParserInterface.h  EnvFileParserInterface.h  TapeInterface.h
src/models/: ConfigurationProperties.cpp  NecessaryFiles.cpp  NecessaryFiles.h
src/parser/: CommandLineParser.cpp  CommandLineParser.h  EnvFileParser.cpp  EnvFileParser.h
src/tape/: Tape.cpp  Tape.h  TapeInterface.h
tests/: CMakeLists.txt  CmdLineParserTests.cpp  EnvFileParserTests.cpp  TapeTests.cpp
